force-app/main/default/objects/Position__c/fields/Application_deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_deadline__c</fullName>
    <label>Application deadline</label>
    <type>Date</type>
</CustomField>