force-app/main/default/objects/Position__c/fields/Must_have_skills__c.field-meta.xml
<CustomField>
    <fullName>Must_have_skills__c</fullName>
    <description>Choose skills that the candidate must have for this position.</description>
    <label>Must have skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advanced PC user</fullName>
            </value>
            <value>
                <fullName>Communication skills</fullName>
            </value>
            <value>
                <fullName>English- Intermediate and better</fullName>
            </value>
            <value>
                <fullName>IT - knowledge</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Organizational skills</fullName>
            </value>
            <value>
                <fullName>Self-motivation</fullName>
            </value>
            <value>
                <fullName>Willingness to learn/adaptability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>