force-app/main/default/objects/Position__c/fields/Vacancy_opening_date__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_opening_date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Vacancy opening date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>