force-app/main/default/objects/Position__c/fields/Working_format__c.field-meta.xml
<CustomField>
    <fullName>Working_format__c</fullName>
    <label>Working format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
                <default>true</default>
                <label>Remote</label>
            </value>
            <value>
                <fullName>On site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>