force-app/main/default/objects/Position__c/validationRules/App_deadline_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>App_deadline_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Vacancy_opening_date__c &gt; Application_deadline__c</errorConditionFormula>
    <errorDisplayField>Application_deadline__c</errorDisplayField>
    <errorMessage>Application deadline cannot be before Vacancy opening date.</errorMessage>
</ValidationRule>