force-app/main/default/objects/Position__c/validationRules/Salary_negative_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_negative_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Salary__c &lt; 0 &amp;&amp; Max_Salary__c &lt; 0</errorConditionFormula>
    <errorMessage>Sallary cannot be Negative!</errorMessage>
</ValidationRule>