force-app/main/default/objects/Position__c/validationRules/Salary_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Salary__c &gt; Max_Salary__c</errorConditionFormula>
    <errorDisplayField>Min_Salary__c</errorDisplayField>
    <errorMessage>Min Salary cannot be more than Max Salary.</errorMessage>
</ValidationRule>