force-app/main/default/objects/Position__c/listViews/Position_Channel.listView-meta.xml
<ListView>
    <fullName>Position_Channel</fullName>
    <columns>NAME</columns>
    <columns>Min_Salary__c</columns>
    <columns>Max_Salary__c</columns>
    <columns>Status__c</columns>
    <columns>Working_format__c</columns>
    <columns>Vacancy_opening_date__c</columns>
    <columns>Application_deadline__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Positions Channel</label>
</ListView>